# VRChatGroupAssistant

./: .gitattributes  .gitignore  Cargo.toml  Features.md  LICENSE  README.md  Tasks.md  ToDo.md  config_guide.json
assets/xcfs/: ArrowButton.xcf  RefreshIcon.xcf
deprecated/frontend/: app.py
docs/: Features.md  Notes.md  PackagesAndCrates.md  Tasks.md  glossary.md  linksTemp.md
docs/for_post_1.0.0/: PossibleTaskIdeas.md  Refactorings.md
docs/for_post_early_release/: PossibleTaskIdeas.md
docs/patterns/: AppContainerLayout.md  MPLGraphEmbedsPyside  MPLGraphEmbedsPyside.md  SizingPixmapsInQLabels.md  WhenToUseSignalsAndSlots.md  linksTemp.md
frontend/: ResourceFilesAndImagesDirNote  controller.py  data_parser.py  main.py  resources.qrc  resources_rc.py  vrcga_signals.py
frontend/deprecated/: grapher.py
frontend/gui/: aboutpage.py  analyticspage.py  applogin.py  appmain.py  controlpanel.py  mainwidget.py  onlinecountsgraph.py  onlinecountstracker.py  quitdialog.py  util.py
frontend/model/: abstractinboundinterlayer.py  data_parser.py  (+10 more)
gui/: aboutpage.py  analyticspage.py  app.py  applogin.py  appmain.py  controlpanel.py  data_parser.py  grapher.py  gui.py  main.py  mainwidget.py  onlinecountstracker.py  quitdialog.py  resources.qrc  resources_rc.py  test.py  util.py  vrcga_signals.py
sandbox/: ConfigSandbox.json  FutureGetDateOptionstIdea.txt  GUIModelDataSandbox.json  GUIStoryBoard.md  Sqlite3dbDesignBrainstorm.md  TaskReorganizationBrainstorm  TaskReorginationBrainstorm  UserProfileSandbox.json  config_sandbox.json  test.py
src/: main.rs  modules.rs
(+93 files in other folders)
