[package]
name = "VRChatGroupAssistant"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = ["json", "cookies", "multipart"] }
tokio = { version = '1', features = ['macros', 'rt-multi-thread', 'signal'] }
vrchatapi = "^1.0"
url = "^2.5"
chrono = "^0.4"
tokio-cron-scheduler = "^0.15"